# Time-de-Agentes

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
agentes_agno/: __init__.py  time.py
agentes_agno.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentes_agno/agentes/: leitor_documentacao.py  orquestrador.py
agentes_agno/core/: contexto.py  documentacao.py  executor.py  gravador_arquivos.py  introspector_django.py  llm.py
agentes_agno/core/rag/: __init__.py  engine.py  loader.py
agentes_agno/integrations/: fastapi_adapter.py
agentes_agno/mcp/: server.py
app/agents/: planner_agent.py  router_agent.py  validator_agent.py
app/core/: contracts.py
app/mcp/: server.py
app/orchestrator/: engine.py
app/services/: task_service.py
app/tools/: github_tool.py  postgres_tool.py  rag_tool.py
tests/: test_documentacao.py  test_executor_retry.py  test_planner.py  test_rag_loader.py  test_router.py  test_sicredi_boletos.py
